[gd_scene load_steps=7 format=3 uid="uid://qwcucdk6oio8"]

[ext_resource type="Theme" uid="uid://cuf1n62gflky0" path="res://assets/menu/TitleScreen.tres" id="1_gfgjs"]
[ext_resource type="Script" uid="uid://bawq4cfv2qo38" path="res://scenes/menu/main_menu.gd" id="1_ngy02"]
[ext_resource type="Texture2D" uid="uid://dwoauqnr4rx6o" path="res://assets/menu/logo.png" id="1_sbiqi"]
[ext_resource type="Texture2D" uid="uid://jh4liwhsymv" path="res://assets/menu/background.png" id="2_e66b0"]
[ext_resource type="FontFile" uid="uid://nm0wv8f4x7q7" path="res://assets/fonts/ia-writer-mono-latin-700-normal.ttf" id="4_3r4tm"]
[ext_resource type="Script" uid="uid://cew6r1fpq1off" path="res://scenes/menu/wipe_data_dialog.gd" id="6_xn6kt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_gfgjs")
script = ExtResource("1_ngy02")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_e66b0")

[node name="TitleScreenContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1980.0
offset_bottom = 1080.0
theme_override_constants/separation = 10
alignment = 1

[node name="Logo" type="TextureRect" parent="TitleScreenContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("1_sbiqi")
expand_mode = 1
stretch_mode = 5

[node name="StartNewRunButton" type="Button" parent="TitleScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="StatisticsButton" type="Button" parent="TitleScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="SettingsButton" type="Button" parent="TitleScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="ExitGameButton" type="Button" parent="TitleScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="DungeonSelectScreenContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 150.0
offset_right = 1920.0
offset_bottom = 950.0
alignment = 1

[node name="ReturnButton" type="Button" parent="DungeonSelectScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="Spacer" type="Control" parent="DungeonSelectScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterSelectScreenContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 320.0
offset_right = 1920.0
offset_bottom = 650.0
alignment = 1

[node name="ReturnButton" type="Button" parent="CharacterSelectScreenContainer"]
custom_minimum_size = Vector2(600, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="Spacer" type="Control" parent="CharacterSelectScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharactersContainer" type="GridContainer" parent="CharacterSelectScreenContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="DifficultySelectScreenContainer" type="VBoxContainer" parent="."]
visible = false
offset_top = 375.0
offset_right = 1920.0
offset_bottom = 700.0
alignment = 1

[node name="ReturnButton" type="Button" parent="DifficultySelectScreenContainer"]
custom_minimum_size = Vector2(600, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="Spacer1" type="Control" parent="DifficultySelectScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultyBox" type="SpinBox" parent="DifficultySelectScreenContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
rounded = true
alignment = 1

[node name="Spacer2" type="Control" parent="DifficultySelectScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartRunButton" type="Button" parent="DifficultySelectScreenContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="StatsScreenContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 350.0
offset_right = 1920.0
offset_bottom = 750.0
alignment = 1

[node name="ReturnButton" type="Button" parent="StatsScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="Spacer" type="Control" parent="StatsScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="GridContainer" parent="StatsScreenContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="SettingsScreenContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 230.0
offset_right = 1920.0
offset_bottom = 810.0
alignment = 1

[node name="ReturnButton" type="Button" parent="SettingsScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="Spacer1" type="Control" parent="SettingsScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DisplaySettingsLabel" type="Label" parent="SettingsScreenContainer"]
layout_mode = 2
text = "Display Settings"
horizontal_alignment = 1

[node name="DisplaySettingsContainer" type="GridContainer" parent="SettingsScreenContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Placeholder1" type="Node" parent="SettingsScreenContainer/DisplaySettingsContainer"]

[node name="ResolutionButton" type="OptionButton" parent="SettingsScreenContainer/DisplaySettingsContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4

[node name="Placeholder2" type="Node" parent="SettingsScreenContainer/DisplaySettingsContainer"]

[node name="WindowModeButton" type="OptionButton" parent="SettingsScreenContainer/DisplaySettingsContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4

[node name="Placeholder3" type="Node" parent="SettingsScreenContainer/DisplaySettingsContainer"]

[node name="ScreenButton" type="OptionButton" parent="SettingsScreenContainer/DisplaySettingsContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4

[node name="Spacer2" type="Control" parent="SettingsScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DangerZoneLabel" type="Label" parent="SettingsScreenContainer"]
layout_mode = 2
text = "DANGER ZONE"
horizontal_alignment = 1

[node name="WipeDataButton" type="Button" parent="SettingsScreenContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_3r4tm")
theme_override_font_sizes/font_size = 35

[node name="WipeDataDialog" type="ConfirmationDialog" parent="SettingsScreenContainer"]
title = "Wipe data?"
ok_button_text = ""
dialog_text = "Are you sure you want to erase all saved data?"
cancel_button_text = ""
script = ExtResource("6_xn6kt")

[connection signal="pressed" from="TitleScreenContainer/StartNewRunButton" to="." method="_on_start_new_run_button_pressed"]
[connection signal="pressed" from="TitleScreenContainer/StatisticsButton" to="." method="_on_statistics_button_pressed"]
[connection signal="pressed" from="TitleScreenContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TitleScreenContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="DungeonSelectScreenContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="CharacterSelectScreenContainer/ReturnButton" to="." method="_on_return_button_to_dungeon_pressed"]
[connection signal="pressed" from="DifficultySelectScreenContainer/ReturnButton" to="." method="_on_return_button_to_character_pressed"]
[connection signal="pressed" from="DifficultySelectScreenContainer/StartRunButton" to="." method="_on_start_run_button_pressed"]
[connection signal="pressed" from="StatsScreenContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="SettingsScreenContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="item_selected" from="SettingsScreenContainer/DisplaySettingsContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="item_selected" from="SettingsScreenContainer/DisplaySettingsContainer/WindowModeButton" to="." method="_on_window_mode_button_item_selected"]
[connection signal="item_selected" from="SettingsScreenContainer/DisplaySettingsContainer/ScreenButton" to="." method="_on_screen_button_item_selected"]
[connection signal="pressed" from="SettingsScreenContainer/WipeDataButton" to="." method="_on_wipe_data_button_pressed"]
[connection signal="canceled" from="SettingsScreenContainer/WipeDataDialog" to="." method="_on_wipe_data_dialog_canceled"]
[connection signal="confirmed" from="SettingsScreenContainer/WipeDataDialog" to="." method="_on_confirmation_dialog_confirmed"]
